--- a/src/theme/styles.scss
+++ b/src/theme/styles.scss
@@ -7,10 +7,9 @@
   margin: 0 auto;
 }
 
-// Remove shadow from material header
-.header-md::after {
-  bottom: -1px;
-  height: 1px;
+.header-md {
+  // Lighten shadow from material header
+  box-shadow: 0 1px 0px -1px rgba(0, 0, 0, 0.2), 0 -1px 8px 0 rgba(0, 0, 0, 0.14), 0 1px 2px 0 rgba(0, 0, 0, 0.12);
 }
 
 body {
